# Anium

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  attach.sh  convert.py  detach.sh  preload.sh
.circleci/: config.yml
src/: anium.cpp  anium.hpp  common.hpp  singleton.hpp
src/events/: bus.hpp  event.hpp  eventbus.cpp  eventbus.hpp  signal.hpp
src/events/impl/: events.hpp  framestagenotifyevent.hpp  paintevent.hpp
src/hooks/: hooker.cpp  hooker.hpp  pattern.hpp  vfunc.hpp
src/interfaces/: iface.hpp  interface.hpp  interfaces.cpp  interfaces.hpp  sourcelib.hpp
src/modules/aimassistance/: aimbot.cpp  aimbot.hpp
src/netvars/: netvar.cpp  netvar.hpp  netvartree.hpp
src/sdk/: Color.hpp  IBaseClientDLL.hpp  ICvar.hpp  Recv.hpp  sdk.hpp
src/sdk/classes/: CBaseClientState.hpp  CEffects.hpp  CGlobalVars.hpp  CGlowObjectManager.hpp  CSGameRules.hpp  CUserCmd.hpp  ConCommandBase.hpp  ConVar.hpp  classes.hpp
src/sdk/definitions/: ClientFrameStage.hpp  DataUpdateType.hpp  Dlight.hpp  EClassIds.hpp  GlowObjectDefinition.hpp  InterfaceReg.hpp  Matrix.hpp  Model.hpp  PaintMode.hpp  SurfaceFontFlags.hpp  VGuiPanel.hpp  definitions.hpp
src/sdk/interfaces/: IBaseClientDLL.hpp  IClientEntity.hpp  ICvar.hpp  IEngineVGui.hpp  ISurface.hpp  sdkinterfaces.hpp
src/sdk/miscellaneous/: Color.hpp  Recv.hpp  ValveMemory.hpp  ValveVector.hpp  Vector.hpp  misc.hpp
src/utils/: hex.cpp  hex.hpp  iohelper.cpp  iohelper.hpp  libraries.hpp  logging.hpp  platforms.cpp  platforms.hpp  platformutils.cpp  platformutils.hpp  sourcelib.hpp  stringutils.cpp  stringutils.hpp
src/vmt/: vmt.cpp  vmt.hpp  vmthook.hpp
src/vmt/impl/: framestagenotify.cpp  framestagenotify.hpp  paint.cpp  paint.hpp
